2016-08-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSMime.m: Fix typo which was causing premature termination of
	long headers.

2016-08-19  Richard Frith-Macdonald <rfm@gnu.org>

	* config/objc-common.g: Darwin patch by David Wetzel
	* Source/CompatibilityHeaders.make: Delete obsolete file
	* configure.ac: Check for libdispatch runloop integration functions
	* Headers/GNUstepBase/GSConfig.h.in: New define for libdispatch
	* config.mak.in: New define for libdispatch
	* Tests/base/NSRunLoop/dispatch.m: Use new define
	* configure: Regenerate
	* Source/Additions/Makefile.preamble:
	* Source/GNUmakefile:
	* Source/Makefile.postamble:
	* Source/Makefile.preamble:
	* Source/ObjectiveC2/Makefile.preamble:
	* Source/unix/Makefile.preamble:
	* Source/win32/Makefile.preamble:
	* Tools/Makefile.preamble:
	* Tools/make_strings/GNUmakefile.preamble:
	Mostly tweaks for building cleanly non-flattened and removal of a few
	long deprecated directories/headers.
	Configuration time change by David Wetzel for building on OSX

2016-07-27  Niels Grewe <niels.grewe@halbordnung.de>

	* Header/Foundation/NSData.h
	* Source/NSData.m:
	Make the deallocator block a direct ivar of NSDataMalloc
	(or NSMutableDataMalloc respectively). Breaks binary 
	compatibility but avoids reallocating objects based on 
	the initializer used.

2016-07-26  Niels Grewe <niels.grewe@halbordnung.de>

	* Source/NSDictionary.m
	* Tests/base/NSDictionary/general.m:
	Fix -getObjects:andKeys:
	
2016-07-26  Niels Grewe <niels.grewe@halbordnung.de>

	* Headers/Foundation/NSData.h
	* Source/NSData.m
	* Tests/base/NSData/general.m:
	Implement OS X 10.9 method -initWithBytesNoCopy:length:deallocator:
	that allows customising data deallocation based on a caller
	supplied block. Also adds test cases for this functionality.

2016-07-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSStream.m:
	* Source/GSSocketStream.m:
	In -close we should close the underlying file descriptor (even if the